Added tests for all services and modified the existing ones to use the factories.